# grast

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: linear_regression.py  polynomial_regression.py
grast/: __init__.py  cfg.py  dual.py  eval_grad.py  forward.py  grad.py
grast/delta/: __init__.py  algebra.py  delta.py
grast/real/: __init__.py  algebra.py  binary.py  expression.py  real.py  unary.py
grast/utils/: __init__.py  brackets.py  delta_str.py  real_str.py
grast/utils/to_string/: __init__.py  brackets.py  delta_str.py  real_str.py  utils.py
tests/: test_readme.py
tests/test_delta/: test_algebra.py
tests/test_dual/: test_eval.py  test_ops.py
