[tool.poetry]
name = "grast"
version = "0.1.2"
description = "Lazy automatic differentiation for Python"
authors = ["cospectrum <severinalexeyv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
matplotlib = "^3.7.2"
ruff = "^0.0.277"
mypy = "^1.4.1"
pyright = "^1.1.316"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["F403", "E731"]
